added weight to font

--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
-  <title>THE 1 Firestarter</title>
+  <title>THE 1 Fire Starter</title>
 </head>
 <body>
   <header>
@@ -48,7 +48,7 @@
     <section class="home">
       <h2>Welcome to Our Site!</h2>
       <h1 class="home__name">
-        THE 1 <span class="home__name--last">Firestarter</span>
+        THE 1 <span class="home__name--last">Fire Starter</span>
       </h1>
       <h2>Light Up Your Life</h2>
 
